feat: choose the color of your new fish, don't tap on the glass